# cpputils

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  path.hpp  stringx.hpp
include/: crc32.hpp  path.hpp  stringx.hpp  strutils.hpp  threadpool.hpp
src/: stringx.cpp  stringx.h
test/: CMakeLists.txt  main.cpp  test_path.cc  test_stringx.cc  test_strutils.cc  test_threadpool.cc
